--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@mantine/hooks": "^8.0.1",
     "@mantine/modals": "^8.0.1",
     "@mantine/notifications": "^8.0.1",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.49.8",
     "@tailwindcss/vite": "^4.1.7",
     "dayjs": "^1.11.13",
     "react": "^19.1.0",
