--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.49.8",
+    "@tabler/icons-react": "^3.33.0",
     "@tailwindcss/vite": "^4.1.7",
     "dayjs": "^1.11.13",
     "react": "^19.1.0",
