--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^19.1.0",
     "react-router": "^7.6.0",
     "recharts": "2",
+    "swr": "^2.3.3",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
