--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,css,md}\"",
     "type-check": "tsc --noEmit",
-    "postbuild": "npx firebase deploy --token $FIREBASE_TOKEN"
+    "postbuild": "./node_modules/.bin/firebase deploy --token $FIREBASE_TOKEN"
   },
   "dependencies": {
     "@capacitor/android": "^7.2.0",
