--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tabler/icons-react": "^3.33.0",
     "@tailwindcss/vite": "^4.1.7",
     "dayjs": "^1.11.13",
+    "firebase-tools": "^14.4.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.0",
