--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@capacitor/ios": "^7.2.0",
     "@mantine/charts": "^8.0.1",
     "@mantine/core": "^8.0.1",
-    "@mantine/dates": "^8.0.2",
     "@mantine/form": "^8.0.1",
     "@mantine/hooks": "^8.0.1",
     "@mantine/modals": "^8.0.1",
@@ -29,9 +28,9 @@
     "@supabase/supabase-js": "^2.49.8",
     "@tabler/icons-react": "^3.33.0",
     "@tailwindcss/vite": "^4.1.7",
-    "dayjs": "^1.11.13",
     "firebase-tools": "^14.4.0",
     "react": "^19.1.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-router": "^7.6.0",
