--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@capacitor/android": "^7.2.0",
     "@capacitor/core": "^7.2.0",
     "@capacitor/ios": "^7.2.0",
+    "@mantine/carousel": "^8.0.2",
     "@mantine/charts": "^8.0.1",
     "@mantine/core": "^8.0.1",
     "@mantine/dates": "^8.0.1",
@@ -29,6 +30,8 @@
     "@tabler/icons-react": "^3.33.0",
     "@tailwindcss/vite": "^4.1.7",
     "dayjs": "^1.11.13",
+    "embla-carousel": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.0",
